--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: [3.7.1, 3.8.1, 3.9.1, 3.10.1, 3.11.11]
 
     steps:
     - uses: actions/checkout@v2
