--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.7.13, 3.8.13, 3.9.13, 3.10.11, 3.11.11]
+        python-version: [3.11.11, 3.13.1]
 
     steps:
       - uses: actions/checkout@v2
